update untuk registration

--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,9 @@
 
     </dependencies>
 
+
     <build>
+        <finalName>be</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
